# ray-optics

./: README.md  about.html  pyproject.toml  rayOptics.js  temp_output.txt
LLM_prj_analysis_prompts/: LLM_notes_during_first_implementation_of_simulator.md  javascript_simulator_code_analysis_and_mapping_to_py.md  simulator_implementation_plan.md  summary_before_sim_implementation.md  surface_merging_implementation_plan.md  to_claude_code.md
cn/: about.html
fr/: about.html
ko/: about.html
pl/: about.html
pt-BR/: about.html
pt-PT/: about.html
ru/: about.html
simulator/: main.js
src_python/core/: __init__.py  constants.py  equation.py  geometry.py  ray.py  scene.py  simulator.py  svg_renderer.py
src_python/core/scene_objs/: __init__.py  base_custom_surface.py  base_filter.py  base_glass.py  base_grin_glass.py  base_scene_obj.py  param_curve_obj_mixin.py
src_python/core/scene_objs/blocker/: blocker.py
src_python/core/scene_objs/glass/: __init__.py  glass.py  ideal_lens.py
src_python/core/scene_objs/light_source/: __init__.py  angle_source.py  beam.py  point_source.py  single_ray.py
src_python/examples/: collimation_demo.py
src_python/examples/collimation_demo/: demo.py
src_python/ray_optics_python.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
ta/: about.html
ta/modules/: modules.html
tw/: about.html
